# SkillboxSearchEngine

./: CMakeLists.txt  README.md  config.json
src/: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp  SearchServer.h  main.cpp
tests/: CMakeLists.txt  test.cpp
